# liran-tools

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
liran_tools/: __init__.py  notebook_tools.py  notify.py  plot_utils.py  results.py  text.py  timeformat.py
liran_tools/results/: __init__.py  analyze.py  plot.py
scripts/: code-sync.sh  install-scripts.sh  res-sync.sh  start-notebook.sh
